hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_get@llvm21.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)
  %1 = call ptr @malloc(i64 %0)
  %2 = insertvalue { ptr, i64 } poison, ptr %1, 0
  %3 = insertvalue { ptr, i64 } %2, i64 0, 1
  %4 = getelementptr inbounds i64, ptr %1, i64 0
  store i64 1, ptr %4, align 4
  %5 = getelementptr inbounds i64, ptr %1, i64 1
  store i64 2, ptr %5, align 4
  %array_ptr = extractvalue { ptr, i64 } %3, 0
  %array_offset = extractvalue { ptr, i64 } %3, 1
  %6 = icmp ult i64 1, 2
  br i1 %6, label %8, label %7

7:                                                ; preds = %entry_block
  br label %13

8:                                                ; preds = %entry_block
  %9 = add i64 1, %array_offset
  %10 = getelementptr inbounds i64, ptr %array_ptr, i64 %9
  %11 = load i64, ptr %10, align 4
  %12 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %11, 1
  br label %13

13:                                               ; preds = %7, %8
  %"0.0" = phi { i1, i64 } [ %12, %8 ], [ { i1 false, i64 poison }, %7 ]
  %array_ptr8 = extractvalue { ptr, i64 } %3, 0
  call void @free(ptr %array_ptr8)
  ret void
}

declare ptr @malloc(i64)

declare void @free(ptr)
