hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_get@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal void @_hl.main.1() {
alloca_block:
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { ptr, i64 }, align 8
  %"9_0" = alloca { i1, i64 }, align 8
  %"9_1" = alloca { ptr, i64 }, align 8
  %"0" = alloca { i1, i64 }, align 8
  %"1" = alloca { ptr, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 2, ptr %"7_0", align 4
  store i64 1, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load i64, ptr %"7_0", align 4
  %0 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)
  %1 = call ptr @malloc(i64 %0)
  %2 = insertvalue { ptr, i64 } poison, ptr %1, 0
  %3 = insertvalue { ptr, i64 } %2, i64 0, 1
  %4 = getelementptr inbounds i64, ptr %1, i64 0
  store i64 %"5_01", ptr %4, align 4
  %5 = getelementptr inbounds i64, ptr %1, i64 1
  store i64 %"7_02", ptr %5, align 4
  store { ptr, i64 } %3, ptr %"8_0", align 8
  %"8_03" = load { ptr, i64 }, ptr %"8_0", align 8
  %"5_04" = load i64, ptr %"5_0", align 4
  %array_ptr = extractvalue { ptr, i64 } %"8_03", 0
  %array_offset = extractvalue { ptr, i64 } %"8_03", 1
  %6 = icmp ult i64 %"5_04", 2
  br i1 %6, label %8, label %7

7:                                                ; preds = %entry_block
  store { i1, i64 } { i1 false, i64 poison }, ptr %"0", align 4
  store { ptr, i64 } %"8_03", ptr %"1", align 8
  br label %13

8:                                                ; preds = %entry_block
  %9 = add i64 %"5_04", %array_offset
  %10 = getelementptr inbounds i64, ptr %array_ptr, i64 %9
  %11 = load i64, ptr %10, align 4
  %12 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %11, 1
  store { i1, i64 } %12, ptr %"0", align 4
  store { ptr, i64 } %"8_03", ptr %"1", align 8
  br label %13

13:                                               ; preds = %7, %8
  %"05" = load { i1, i64 }, ptr %"0", align 4
  %"16" = load { ptr, i64 }, ptr %"1", align 8
  store { i1, i64 } %"05", ptr %"9_0", align 4
  store { ptr, i64 } %"16", ptr %"9_1", align 8
  %"9_17" = load { ptr, i64 }, ptr %"9_1", align 8
  %array_ptr8 = extractvalue { ptr, i64 } %"9_17", 0
  call void @free(ptr %array_ptr8)
  ret void
}

declare ptr @malloc(i64)

declare void @free(ptr)
